# furnace

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  BUILDING_LINUX_PACKAGES.md  CHANGELOG.md  CHANGES_SUMMARY.md  CODEBASE_REVIEW.md  CODE_AUDIT.md  CODE_OF_CONDUCT.md  CODE_QUALITY_IMPROVEMENTS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_REVIEW_SUMMARY.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DEAD_CODE_FIXES.md  EXTENSIBILITY.md  FEATURES.md  FEATURE_IMPLEMENTATION_SPEC.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_ECHO_FIX.md  OPTIMIZATIONS.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  PKGBUILD  PLUGIN_DEVELOPMENT.md  README.md  SECURITY.md  SUMMARY.md  UI_FEATURES_NOW_OPTIONAL.md  VERIFICATION_REPORT.md  build-linux-distro.sh  cobertura.xml  config.default.lua  (+5 more)
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  performance_issue.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/agents/: my-agent.agent.md
.github/workflows/: build-releases.yml  ci.yml  feature-tests.yml  publish-cmdx.yml
benches/: terminal_bench.rs
crates/cmdx/: Cargo.toml  README.md
crates/cmdx/src/: lib.rs
examples/plugins/: Cargo.toml  README.md
examples/plugins/git_integration/: Cargo.toml
examples/plugins/git_integration/src/: lib.rs
examples/plugins/hello_world/: Cargo.toml
examples/plugins/hello_world/src/: lib.rs
examples/plugins/system_info/: Cargo.toml
examples/plugins/system_info/src/: lib.rs
examples/plugins/text_processor/: Cargo.toml
examples/plugins/text_processor/src/: lib.rs
examples/plugins/weather/: Cargo.toml
examples/plugins/weather/src/: lib.rs
releases/: BUILD_INFO.txt  README.md  SHA256SUMS  furnace-linux-x86_64  furnace-linux-x86_64-latest
releases/linux-distro/: SHA256SUMS  furnace-1.0.0-1.x86_64.rpm  furnace-1.0.0-x86_64.AppImage  furnace_1.0.0_amd64.deb
src/: colors.rs  hooks.rs  keybindings.rs  lib.rs  main.rs  progress_bar.rs  session.rs
src/config/: mod.rs
src/gpu/: glyph_cache.rs  mod.rs  renderer.rs  text.rs
src/gpu/shaders/: terminal.wgsl
src/plugins/: api.rs  loader.rs  mod.rs
src/shell/: mod.rs
src/ssh_manager/: mod.rs
src/terminal/: ansi_parser.rs  input.rs  mod.rs  renderer.rs
src/translator/: mod.rs
src/ui/: autocomplete.rs  command_palette.rs  mod.rs  panes.rs  resource_monitor.rs  themes.rs
src/url_handler/: mod.rs
tests/: additional_coverage_tests.rs  comprehensive_coverage_tests.rs  final_coverage_push.rs  functionality_verification.rs  integration_tests.rs  live_terminal_integration_tests.rs  maximum_coverage_tests.rs  targeted_coverage_tests.rs  terminal_event_loop_tests.rs
