[package]
name = "furnace"
version = "1.0.0"
edition = "2021"
authors = ["RyAnPr1Me"]
description = "An extremely advanced, high-performance terminal emulator for Windows"
license = "MIT"
repository = "https://github.com/RyAnPr1Me/furnace"
keywords = ["terminal", "emulator", "windows", "performance"]
categories = ["command-line-utilities"]

[[bin]]
name = "furnace"
path = "src/main.rs"

[dependencies]
# Terminal rendering and UI
crossterm = "0.27"
ratatui = "0.25"

# Async runtime for high performance
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Process management
portable-pty = "0.8"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

# Command line parsing
clap = { version = "4.4", features = ["derive", "cargo"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Colors and themes
colorgrad = "0.6"

# Unicode support
unicode-width = "0.1"
unicode-segmentation = "1.10"

# History and autocomplete
rustyline = "13.0"

# GPU rendering (optional, for high-performance rendering)
wgpu = { version = "0.19", optional = true }

# System monitoring
sysinfo = "0.30"

# Fuzzy search for command palette
nucleo = "0.5"
fuzzy-matcher = "0.3"

# Plugin system
libloading = "0.8"

# Utility
dirs = "5.0"
which = "5.0"

# Windows specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security",
] }
winapi = { version = "0.3", features = ["wincon", "winuser", "processthreadsapi"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# GPU acceleration feature
[features]
default = []
gpu = ["wgpu"]

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "terminal_bench"
harness = false
