[package]
name = "furnace"
version = "1.0.0"
edition = "2021"
authors = ["RyAnPr1Me"]
description = "An extremely advanced, high-performance terminal emulator for Windows"
license = "MIT"
repository = "https://github.com/RyAnPr1Me/furnace"
keywords = ["terminal", "emulator", "windows", "performance"]
categories = ["command-line-utilities"]

[[bin]]
name = "furnace"
path = "src/main.rs"

[dependencies]
# Terminal rendering and UI
crossterm = "0.27"
ratatui = "0.25"

# Async runtime for high performance
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Process management
portable-pty = "0.8"

# Configuration
serde = { version = "1.0", features = ["derive"] }
mlua = { version = "0.9", features = ["lua54", "vendored"] }
serde_yaml = "0.9"  # Used for theme file format (themes/*.yaml)

# Command line parsing
clap = { version = "4.4", features = ["derive", "cargo"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Colors and themes
colorgrad = "0.6"

# Unicode support
unicode-width = "0.1"
unicode-segmentation = "1.10"

# History and autocomplete
rustyline = "13.0"

# GPU rendering (optional, for high-performance rendering)
wgpu = { version = "0.19", optional = true }
# GPU text rendering
glyphon = { version = "0.5", optional = true }
# Window creation for GPU context
winit = { version = "0.29", optional = true }
# Font handling
fontdue = { version = "0.8", optional = true }

# System monitoring
sysinfo = "0.30"

# Fuzzy search for command palette
nucleo = "0.5"
fuzzy-matcher = "0.3"

# Plugin system
libloading = "0.8"

# Session management
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Utility
dirs = "5.0"
which = "5.0"
once_cell = "1.21"
regex = "1.10"

# ANSI/VTE terminal parsing
vte = "0.15"

# Clipboard support
arboard = "3.3"

# Image loading for background images
image = "0.24"

# For GPU feature
bitflags = "2.4"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }

# Windows specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security",
] }
winapi = { version = "0.3", features = ["wincon", "winuser", "processthreadsapi"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3                    # Maximum optimization
lto = "fat"                      # Full link-time optimization (fat LTO for best performance)
codegen-units = 1                # Single codegen unit for better optimization
strip = true                     # Strip debug symbols
panic = "abort"                  # Smaller binary, faster panics
overflow-checks = false          # Disable overflow checks in release for speed
debug = false                    # No debug info in release

# Optimize dependencies even in dev builds for better performance during development
[profile.dev.package."*"]
opt-level = 2

# GPU acceleration feature
[features]
default = []
gpu = ["wgpu", "glyphon", "winit", "fontdue"]

[profile.dev]
opt-level = 1                    # Slight optimization in dev for faster iteration
debug = true
incremental = true               # Enable incremental compilation for faster rebuilds

[[bench]]
name = "terminal_bench"
harness = false
