[package]
name = "cmdx"
version = "0.1.0"
edition = "2021"
authors = ["RyAnPr1Me"]
description = "Cross-platform command translation - automatically translate Linux commands to Windows and vice versa"
license = "MIT"
repository = "https://github.com/RyAnPr1Me/furnace"
homepage = "https://github.com/RyAnPr1Me/furnace"
documentation = "https://docs.rs/cmdx"
readme = "README.md"
keywords = ["cli", "command", "translator", "cross-platform", "windows"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "cmdx"
path = "src/lib.rs"

[dependencies]
# No external dependencies - zero-copy design with static maps

[dev-dependencies]
# For testing

[features]
default = []
